Updated .gitignore to exclude generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 .DS_Store
-.sass-cache/*
 *.scssc
+.bundle
+.DS_Store
+.sass-cache
+.gist-cache
+.pygments-cache
+_deploy
+sass.old
+source.old
+source/_stash
+source/stylesheets/screen.css
+vendor
+node_modules
